Fix issue where tabs would overflow improperly.

--- a/web/release/ogres.app.css
+++ b/web/release/ogres.app.css
@@ -383,6 +383,7 @@ legend {
 
 .scenes ul {
     display: flex;
+    flex-wrap: wrap;
     gap: 1px;
     height: 100%;
     margin: 0;
